Improve position of version info to prevent covering of buttons
This is mainly because of test failures

--- a/frontend/src/app/+settings/settings-list/settings-list.component.scss
+++ b/frontend/src/app/+settings/settings-list/settings-list.component.scss
@@ -1,3 +1,7 @@
+:host {
+    padding-bottom: 20px;
+}
+
 .input-group {
   padding: 5px 15px 0;
 }
