--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -15,7 +15,7 @@
 #version-info {
     position: fixed;
     bottom: 3px;
-    right: 5px;
+    left: 5px;
     font-size: 12px;
     color: #aaaaaa;
 }
